--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1151,8 +1151,9 @@ FAQ Page
 Video Section style
 ======================*/
 .video{
-    background: url(../images/background/video.jpg) no-repeat center center;
-    background-size: cover;
+    /* background: url(../images/background/video.jpg) no-repeat center center;
+    background-size: cover; */
+    background-color: white;
     position: relative;
 }
 .main_video{
