--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1042,8 +1042,9 @@ About section style
 .main_about{
     display: flex;
     width:100%;
-    
-    position: relative;
+    justify-self: center;
+    justify-content: center;
+    flex-direction: row;
 }
 
 .about_bottom_content{}
